8323605: Java source launcher should not require `--source ...` to enable preview